fixing page-jump button spacing

--- a/theme/common.css
+++ b/theme/common.css
@@ -946,7 +946,7 @@ fieldset.fields1 dl.pmlist dd.recipients {
 }
 
 .pagination li.page-jump {
-	margin-right: 5px;
+	margin-right: 10px;
 }
 
 .pagination .button::before {
